css/utils.css
.vertically-centered {
	margin-top: auto;
	margin-bottom: auto;
}

.horizontally-centered {
	margin-left: auto;
	margin-right: auto;
}

.centered {
	margin-left: auto;
	margin-right: auto;
	margin-top: auto;
	margin-bottom: auto;
}

body {
	background-color: rgb(25, 25, 25);
	color: #FFFFFF;
	min-height: 100%;
}

html {
	scroll-behavior: smooth;
}

@font-face {
	font-family: 'BootstrapIcons';
	src: url('../assets/fonts/bootstrap-icons.woff') format('woff');
}

@font-face {
	font-family: 'UbuntuMono';
	src: url('../assets/fonts/UbuntuMono.ttf') format('truetype');
}

html, body {
	font-family: 'UbuntuMono' !important;
}

.frosted-glass {
	background-color: rgba(65, 65, 65, 0.3);
	backdrop-filter: blur(10px);
	-webkit-backdrop-filter: blur(10px);
	z-index: 1000;
}

.bootstrap-icon {
	font-family: 'BootstrapIcons';
}

.full-width {
	width: 100%;
}

.navbar > div {
	padding-left: 35px;
	padding-right: 35px;
}

@media (min-width: 992px) {
	.navbar > div {
		padding-left: 100px;
		padding-right: 100px;
	}
}

.navbar-supported-content {
	margin-left: 100px;
}

@media (max-width: 991px) {
	.navbar-supported-content {
		margin-left: -20px !important;
		margin-bottom: 15px;
	}
}

/* This weird selector is for the list items in the ul that is inside the navbar. */
ul, .navbar-nav li {
	margin-left: 10px;
	margin-right: 10px;
}

/* This weird selector is for the anchor tags in the ul that is inside the navbar. */
ul, .navbar-nav a {
	font-size: 20px;
}

/* This weird selector is for the anchor tags in the ul that is inside the navbar. */
ul, .navbar-nav a:hover {
	color: #DDDDDD;
}

.purchase {
	text-wrap: nowrap;
}

.purchase > p {
	font-size: 20px;
	margin: 0;
}

.sticky-top {
	position: fixed;
	top: 0;
}

.sticky-bottom {
	position: fixed;
	bottom: 0;
}

.blue-to-cyan-text {
	background: linear-gradient(75deg,
	#2164F3 0%,
	#66B2F9 50%,
	#AAFFFF 100%);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

.sky-to-blue-text {
	background: linear-gradient(75deg,
	#87CEEB 0%,
	#61B2FB 50%,
	#1E90FF 100%);
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
}

.footer-content {
	display: flex;
	justify-content: space-between;
	flex-direction: row;
	margin-left: 200px;
	margin-right: 200px;
}

.footer-socials {
	display: flex;
	flex-direction: row;
	gap: 20px;
}

.footer-branding {
	display: flex;
	flex-direction: row;
	gap: 30px;
}

.social-media-icon {
	text-decoration: none;
}

